# CHAL-PICO2-Example

./: .gitmodules  CMakeLists.txt  README.md  halgit.py  repos.json
src/: CMakeLists.txt  main.cpp
src/include/: enabled_modules.h  global_includes.h  platform_cshal.h  project_defs.h  threads_list.h
